# lazyimage

./: Cargo.toml  README.md  bin  example.txt
.github/workflows/: actionlint.yml  release.yml  review.yml
assets/: font8x16_remapped_1bpp.raw  init.sh
examples/: converter.rs
src/: canvas.rs  color.rs  color_remapper.rs  debug_display.rs  encoder.rs  error.rs  filled.rs  image.rs  image_display.rs  interface.rs  iohelper.rs  layered.rs  lib.rs  main.rs  math.rs  reader.rs  utility.rs
src/buffer_prober/: mod.rs
src/decoder/: mod.rs  nbit.rs  passthrough.rs  text.rs
src/display/: imagebuffer.rs  mod.rs  print.rs  stdout.rs
src/filter/: join.rs  layered.rs  mod.rs  overlay.rs  remap.rs
src/math/: mod.rs
src/reader/: mod.rs
src/sink/: mod.rs  png.rs
src/source/: byte_reader.rs  font.rs  image_crate.rs  mod.rs  reader.rs  rect.rs  scaledtextarea.rs  simple_monochrome_reader.rs  simple_text_reader.rs  textarea.rs
src/source/decoder/: fullcolor.rs  mod.rs  monochrome.rs  text.rs
src/source/primitive/: rect.rs
src/source/reader/: fullcolor.rs  mod.rs  monochrome.rs  text.rs
tests/: reader_test.rs  source_test.rs  utility_test.rs
