[package]
name = "image-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", optional = true, default-features = false }
derivative = { version = "2.2.0", features = ["use_core"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = ["debug_sink"]
debug_sink = ["png_sink"]
png_sink = ["std", "image", "image/png"]
std = []
