[package]
name = "lazyimage"
version = "0.1.0"
edition = "2021"
authors = ["yanorei32"]
description = "The iterator-based lazy evaluation image library for low-memory embedded targets (likes STM32)"
readme = "README.md"
repository = "https://github.com/yanorei32/image-provider/"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", optional = true, default-features = false }
derivative = { version = "2.2.0", features = ["use_core"], default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = ["debug_sink", "std"]
debug_sink = ["png_sink"]
png_sink = ["std", "image", "image/png", "sink"]
sink = []
std = []
